--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   timeago: ^3.1.0
   flutter_svg: ^0.22.0
   riverpod: ^0.14.0+3
+  page_transition: ^2.0.2
 dev_dependencies:
   flutter_test:
     sdk: flutter
