--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   flutter_svg: ^0.22.0
   riverpod: ^0.14.0+3
   page_transition: ^2.0.2
+  hooks_riverpod: ^0.14.0+4
+  flutter_hooks: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
